Use padding instead of margin for the section containers. Also fixed some spacings.

--- a/app/assets/stylesheets/scss/pages/home/_cfs.scss
+++ b/app/assets/stylesheets/scss/pages/home/_cfs.scss
@@ -1,5 +1,4 @@
 .c-cfs {
-  margin: ($base-spacing-unit * 4) 0;
   padding: ($base-spacing-unit * 4) 0;
   background: url(pattern-03.png),
               linear-gradient(120deg, $color-brand-secondary-light 30%, $color-brand-secondary 70%);
